# leraine-studio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
binaries/: imgui.ini
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  leraine-studio.sln  leraine-studio.vcxproj  leraine-studio.vcxproj.filters
cmake/.cmake/api/v1/reply/: cache-v2-2d94cf8d14f6f28e8856.json  codemodel-v2-9411f068cf552621553b.json  index-2020-12-24T10-47-37-0835.json  target-ALL_BUILD-MinSizeRel-0e285975f4104d4b7d55.json  target-ZERO_CHECK-Release-fa08a1870f2879f477b0.json  target-leraine-studio-Debug-76112e9b2fbd21d6ff68.json  target-leraine-studio-MinSizeRel-dc62809cbd368590dac1.json  target-leraine-studio-RelWithDebInfo-2f1dfb1faa1ef1f45533.json  (+1 more)
cmake/leraine-studio.dir/Debug/: leraine-studio.exe.recipe
cmake/leraine-studio.dir/Debug/leraine-studio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  leraine-studio.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/leraine-studio.dir/Release/: leraine-studio.exe.recipe
cmake/leraine-studio.dir/Release/leraine-studio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
include/: bass.h
source/: main.cpp
source/editing/: bpm-edit-mode.cpp  bpm-edit-mode.h  edit-flags.h  note-edit-mode.cpp  note-edit-mode.h  select-edit-mode.cpp  select-edit-mode.h
source/editing/base/: edit-mode.cpp  edit-mode.h
source/global/: global-functions.cpp  global-functions.h  global-types.h
source/modules/: audio-module.cpp  audio-module.h  background-module.cpp  background-module.h  beat-module.cpp  beat-module.h  chart-parser-module.cpp  chart-parser-module.h  debug-module.cpp  debug-module.h  dialog-module.cpp  dialog-module.h  edit-module.cpp  edit-module.h  imgui-module.cpp  imgui-module.h  input-module.cpp  input-module.h  minimap-module.cpp  minimap-module.h  notification-module.cpp  notification-module.h  popup-module.cpp  popup-module.h  shortcut-menu-module.cpp  shortcut-menu-module.h  timefield-render-module.cpp  timefield-render-module.h  waveform-module.cpp  waveform-module.h  window-module.cpp  window-module.h
source/modules/base/: module.cpp  module.h
source/modules/manager/: module-manager.cpp  module-manager.h
source/program/: program-meta.cpp  program.cpp  program.h
source/structures/: chart-metadata.h  chart.cpp  chart.h  configuration.cpp  configuration.h  cursor.h  newchart-data.h  notification-message.cpp  notification-message.h  skin.cpp  skin.h  timefield-metrics.h  timefield-render-graph.cpp  timefield-render-graph.h  waveform-data.h  window-metrics.h
source/utilities/imgui/addons/: imgui_user.h  imgui_user.inl
source/utilities/imgui/std/: imgui-stdlib.cpp  imgui-stdlib.h
(+16 files in other folders)
